<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".imcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tituloImc"
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/altura"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/peso"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/btnCalcular"
        android:onClick="calculaImc"/>

    <TextView
        android:id="@+id/txtvResult"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/txtvResultTitulo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/result0Titulo"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtvResultCalculo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/result0Calculo"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/txtvResultLaudo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/result0Laudo"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imgResult"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="center"
        android:visibility="invisible"/>

</LinearLayout>